[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nvdclient"
version = "0.0.1"
authors = [
    "Lachlan Jones",
]
description = "An convenience python class for interacting with NVD"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://github.com/lachjones/nvdclient"
Issues = "https://github.com/lachjones/nvdclient/issues"

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.0.0"
datetime = "^5.5"
iso639-lang = "^2.4.2"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
black = ">=23.10.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0.0"
