[project]
name = "nvdinterface"
version = "0.6.3"
authors = [
    {name = "Lachlan Jones"},
]
description = "An convenience python class for interacting with NVD"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"

dependencies = [
    "requests==2.33.1",
    "datetime==6.0",
    "iso639-lang==2.6.3",
    "urllib3==2.6.3"
]

[project.urls]
Homepage = "https://github.com/lachjones/nvdinterface"
Repository = "https://github.com/lachjones/nvdinterface"
Issues = "https://github.com/lachjones/nvdinterface/issues"
Changelog = "https://github.com/LachJones/nvdinterface/tags"

[project.optional-dependencies]
dev = ["black==26.3.1", "sphinx==9.0.4"]

[tool.poetry]
packages = [{include = "nvdinterface"}]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"